Идея авторизации через кошелек(не доделана)

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>libs/</classpathPrefix>
                             <mainClass>
-                                ForexApp
+                                manager.ForexApp
                             </mainClass>
                         </manifest>
                     </archive>
