--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,25 @@
             <artifactId>javafx-fxml</artifactId>
             <version>19</version>
         </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.dlsc.formsfx/formsfx-core -->
+        <dependency>
+            <groupId>com.dlsc.formsfx</groupId>
+            <artifactId>formsfx-core</artifactId>
+            <version>11.5.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/net.synedra/validatorfx -->
+        <dependency>
+            <groupId>net.synedra</groupId>
+            <artifactId>validatorfx</artifactId>
+            <version>0.3.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -58,6 +77,14 @@
                             </mainClass>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>MyApplication</mainClass>
                 </configuration>
             </plugin>
 
