--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>validatorfx</artifactId>
             <version>0.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>at.favre.lib</groupId>
+            <artifactId>bcrypt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
 
 
     </dependencies>
